<?xml version="1.0"?>
<package format="2">
  <name>cloudwatch_metrics_common</name>
  <version>1.0.0</version>
  <description>Library used by ROS1/2 node to publish metrics</description>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>aws_common</depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
